feat: premier commit – setup initial + dossiers accordéon avec SCSS, clip-path, icônes animées et accessibilité

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,3 +1,6 @@
 /* ---------------------- Liens vers les pages à relier --------------------- */
 
 @import "./settings";
+@import "./layouts/intro";
+@import "./layouts/header";
+@import "./layouts/main";
