--- a/assets/styles/_settings.scss
+++ b/assets/styles/_settings.scss
@@ -4,22 +4,42 @@
 
 /* ---------------------------- Import des fonts ---------------------------- */
 @font-face {
-  font-family: "Nom-police";
-  src: url(../chemin/vers/la/font.ttf);
+  font-family: "Orbitron";
+  src: url(../fonts/Orbitron-VariableFont_wght.ttf);
+  font-display: swap; //Pour éviter les décalages de mise en page
+}
+@font-face {
+  font-family: "IBM";
+  src: url(../fonts/IBMPlexSans-VariableFont_wdth\wght.ttf);
+  font-display: swap; //Pour éviter les décalages de mise en page
+}
+@font-face {
+  font-family: "JetBrain";
+  src: url(../fonts/JetBrainsMono-VariableFont_wght.ttf);
   font-display: swap; //Pour éviter les décalages de mise en page
 }
 
 /* --------------------------- Variables et mixins -------------------------- */
 //1 Variables
-$font: "Nom-police", serif;
-$white: white;
-$black: black;
+$titre: "Orbitron", fantasy;
+$text: "IBM", sans-serif;
+$code: "JetBrain", monospace;
+$black: #0d0d0d;
+$anthracite: #2d2d2d;
+$grey: #7f8c8d;
+$white: #ffffff;
+$color: #39ff14;
 
 //1 Mixins
 @mixin centerChild {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+@mixin maxWidth {
+  width: 85%;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 /* ---------------------------- Réglages généraux --------------------------- */
@@ -31,18 +51,68 @@ $black: black;
 body {
   width: 100dvw;
   min-height: 100dvh;
-  background: red;
-  overflow: hidden;
+  background: $black;
+  overflow-x: hidden;
 }
 li {
   list-style: none;
 }
 a,
 a:visited {
-  color: $black;
+  color: $white;
+  font-family: $text;
   text-decoration: none;
+  font-size: 1.3rem;
+}
+h1 {
+  color: $color;
+  font-family: $titre;
+  font-weight: 800;
+  font-size: 3rem;
+}
+h2 {
+  color: $color;
+  font-family: $titre;
+  font-weight: 700;
+  font-size: 2rem;
+}
+p {
+  color: $white;
+  font-family: $text;
+  padding: 5px 0;
+}
+.code {
+  color: $white;
+  font-family: $code;
+}
+#cursor {
+  height: 20px;
+  width: 10px;
+  background: $white;
+  svg {
+    height: 28px;
+    width: auto;
+    transform: translateX(10px);
+  }
 }
 
 /* -------------------------------------------------------------------------- */
 /*                      Réglages size : fluid responsive                      */
 /* -------------------------------------------------------------------------- */
+// 1 de 1200px à 320px
+// Passage de 1.3rem à 0.75rem
+p,
+p.code {
+  font-size: clamp(0.75rem, calc(0.75rem + ((1vw - 0.2rem) * 1)), 1.3rem);
+  min-height: 0vw;
+}
+// Passage de 3rem à 1.7rem
+h1 {
+  font-size: clamp(1.7rem, calc(1.7rem + ((1vw - 0.2rem) * 2.3636)), 3rem);
+  min-height: 0vw;
+}
+// Passage de 2rem à 1.1rem
+h2 {
+  font-size: clamp(1.1rem, calc(1.1rem + ((1vw - 0.2rem) * 1.6364)), 2rem);
+  min-height: 0vw;
+}
