--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -12,15 +12,15 @@ header {
 
 //! Il faudra remettre l'animation d'entrée
 // Animation d'entrée
-// header {
-//   opacity: 0;
-//   animation: fadeInSoft 1s ease-out 6.5s forwards;
-// }
-// @keyframes fadeInSoft {
-//   from {
-//     opacity: 0;
-//   }
-//   to {
-//     opacity: 1;
-//   }
-// }
+header {
+  opacity: 0;
+  animation: fadeInSoft 1s ease-out 6.5s forwards;
+}
+@keyframes fadeInSoft {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
