--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -89,7 +89,10 @@ p {
 /* -------------------------------------------------------------------------- */
 p,
 p.code,
-label {
+label,
+#submit-button,
+a,
+h3 {
   font-size: clamp(0.75rem, 0.75rem + (1vw - 0.2rem) * 1, 1.3rem);
   min-height: 0vw;
 }
@@ -301,14 +304,19 @@ input[type=radio] {
   -webkit-clip-path: polygon(100% 100%, 0% 100%, 0% 0%, 25% 0%, 30% 1.5em, 70% 1.5em, 75% 0%, 100% 0%);
           clip-path: polygon(100% 100%, 0% 100%, 0% 0%, 25% 0%, 30% 1.5em, 70% 1.5em, 75% 0%, 100% 0%);
   padding: 10px;
-  margin: 20px 0;
-  width: min(90vw, 900px);
+  margin: 20px auto;
+  width: 80%;
   -webkit-box-shadow: 0 4px 8px rgba(57, 255, 20, 0.15);
           box-shadow: 0 4px 8px rgba(57, 255, 20, 0.15);
   -webkit-transition: -webkit-transform 0.3s ease;
   transition: -webkit-transform 0.3s ease;
   transition: transform 0.3s ease;
   transition: transform 0.3s ease, -webkit-transform 0.3s ease;
+}
+@media screen and (max-width: 770px) {
+  .folder {
+    width: 100%;
+  }
 }
 .folder h2 {
   font-size: 1.5rem;
@@ -409,7 +417,8 @@ input[type=radio] {
 .folder .folder-content .screen form input[type=text],
 .folder .folder-content .screen form input[type=email],
 .folder .folder-content .screen form textarea {
-  width: 250px;
+  width: clamp(130px, 8.125rem + (1vw - 3.2px) * 13.6364, 250px);
+  min-height: 0vw;
   font-family: "IBM", sans-serif;
   color: #7f8c8d;
 }
@@ -425,7 +434,7 @@ input[type=radio] {
   display: none;
 }
 .folder .folder-content .screen form #submit-button {
-  padding: 10px 25px;
+  padding: 5px 10px;
   margin: 10px 0;
   background: #ffffff;
   border: 1px solid #7f8c8d;
@@ -438,7 +447,7 @@ input[type=radio] {
 }
 
 input[type=radio]:checked + .folder .folder-content {
-  max-height: 1500px;
+  max-height: 5000px;
 }
 
 input[type=radio]:checked + .folder h2 label::before {
