--- a/assets/styles/layouts/_intro.scss
+++ b/assets/styles/layouts/_intro.scss
@@ -1,7 +1,7 @@
 // ====== ✨ [INTRO ANIMATION] : Animation d’apparition du texte + curseur ======
 
 .intro-animation {
-  // TODO Enlever cette ligne quand le dev sera terminé !
+  // TEMP Enlever cette ligne quand le dev sera terminé !
   display: none;
   position: absolute;
   width: 100%;
