--- a/assets/styles/layouts/_main.scss
+++ b/assets/styles/layouts/_main.scss
@@ -1,176 +1,16 @@
-section#whoami,
-section#projects,
-section#blog,
-section#contact {
-  @include maxWidth;
-  padding: 0 20px;
-}
+// ====== 🧩 [MAIN] : Styles principaux des sections et composants centraux ======
 
-input[type='radio'] {
-  display: none;
-}
-.folder {
-  background: $anthracite;
-  border: 1px solid $grey;
-  clip-path: polygon(100% 100%, 0% 100%, 0% 0%, 25% 0%, 30% 1.5em, 70% 1.5em, 75% 0%, 100% 0%);
-  padding: 10px;
-  margin: 20px auto;
-  width: 80%;
-  @media screen and (max-width: 770px) {
-    width: 100%;
-  }
-  box-shadow: 0 4px 8px rgba(57, 255, 20, 0.15);
-  transition: transform 0.3s ease;
+// Paramètres communs aux sections
+@import './sections-folder';
 
-  h2 {
-    font-size: 1.5rem;
-    margin-bottom: 20px;
-    label {
-      cursor: pointer;
-      &::before {
-        content: '\003E';
-        display: inline-block;
-        margin-right: 10px;
-        transition: transform 0.3s ease;
-      }
-    }
-    .sr-only {
-      margin-bottom: 10px;
-      position: absolute;
-      width: 1px;
-      height: 1px;
-      padding: 0;
-      overflow: hidden;
-      clip: rect(0, 0, 0, 0);
-      white-space: nowrap;
-      border: 0;
-    }
-  }
-  .folder-content {
-    //Accordeon settings
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.5s;
-    .screen {
-      padding: 10px 30px;
-      background: $black;
-      border: 1px solid $grey;
-      margin: 0 10px 10px;
-      .paragraph {
-        padding: 10px 0;
-        a {
-          color: $color;
-        }
-        ul li {
-          p {
-            display: inline-block;
-          }
-          a {
-            color: $color;
-            text-decoration: underline;
-          }
-        }
-      }
-      .markdown {
-        p,
-        a,
-        div {
-          font-family: $code;
-          font-weight: 300;
-          padding: 0;
-        }
-        a {
-          color: $color;
-          text-decoration: underline;
-        }
-        h3 {
-          padding-bottom: 10px;
-        }
-        .paragraph {
-          padding: 10px 0;
-          ul li {
-            p {
-              display: inline-block;
-            }
-            a {
-              color: $color;
-              text-decoration: underline;
-            }
-          }
-        }
-        .separator {
-          padding: 25px 0;
-          color: $white;
-        }
-        .status {
-          padding-top: 15px;
-          color: $grey;
-        }
-        background: $anthracite;
-        border: 1px solid $grey;
-        width: 95%;
-        margin: 10px auto;
-        padding: 10px;
-      }
-      form {
-        label {
-          display: block;
-          color: $white;
-          font-family: $text;
-        }
-        input[type='text'],
-        input[type='email'],
-        textarea {
-          width: clamp(130px, calc(8.125rem + ((1vw - 3.2px) * 13.6364)), 250px);
-          min-height: 0vw;
-          font-family: $text;
-          color: $grey;
-        }
-        input[type='text'],
-        input[type='email'] {
-          height: 25px;
-        }
-        textarea {
-          height: 75px;
-          resize: none;
-        }
-        input[type='checkbox'] {
-          display: none;
-        }
-        #submit-button {
-          padding: 5px 10px;
-          margin: 10px 0;
-          background: $white;
-          border: 1px solid $grey;
-          color: $black;
-          display: block;
-          width: fit-content;
-          cursor: pointer;
-        }
-      }
-    }
-  }
-}
-input[type='radio']:checked + .folder .folder-content {
-  max-height: 5000px;
-}
+// Accordeon Hack
+@import './accordeon';
 
-input[type='radio']:checked + .folder h2 label::before {
-  transform: rotate(90deg);
-}
+// Formulaire contact
+@import '../components/form';
 
-input[type='checkbox'] {
-  display: none;
-}
-.confirmation-message {
-  display: none;
-}
-input[type='checkbox']:checked + label ~ .confirmation-message {
-  display: block;
-}
-
-//! Il faudra remettre l'animation d'entrée
-// Animation d'entrée
+// ====== 🎞️ [ANIMATION D'ENTREE : Affichage retardé après l'anim d'intro]
+//TEMP Il faudra remettre l'animation d'entrée
 // main {
 //   opacity: 0;
 //   animation: fadeInSoft 1s ease-out 7s forwards;
