--- a/assets/styles/utils/_variables.scss
+++ b/assets/styles/utils/_variables.scss
@@ -10,10 +10,11 @@ $black: #0d0d0d;
 $anthracite: #2d2d2d;
 $grey: #7f8c8d;
 $white: #ffffff;
-$color: #39ff14;
+$color: #39ff14; //IDEA Penser à des variations de couleurs pour plus de flexibilité
 
 // 📏 Définition des breakpoints
 $breakpoints: (
   mobile: 480px,
-  tablette: 770px
+  tablet: 770px,
+  desktop: 1024px
 );
