🔧 amélioration de la margin left (beaucoup plus joli !)

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -50,21 +50,18 @@ a,
 a:visited {
   color: #39ff14;
   font-family: "IBM Plex Sans", sans-serif;
-  font-size: 1.3rem;
 }
 
 h1 {
   color: #39ff14;
   font-family: "Orbitron", fantasy;
   font-weight: 800;
-  font-size: 3rem;
 }
 
 h2 {
   color: #39ff14;
   font-family: "Orbitron", fantasy;
   font-weight: 700;
-  font-size: 2rem;
 }
 
 p {
@@ -117,7 +114,6 @@ h2 {
 }
 
 .intro-animation {
-  display: none;
   position: absolute;
   width: 100%;
   z-index: 100;
@@ -140,8 +136,23 @@ h2 {
 }
 .intro-animation .intro-animation-container .intro-text-container {
   width: 100%;
-  margin-left: clamp(1px, 0.0625rem + (1vw - 3.2px) * 28.2955, 250px);
+  margin-left: clamp(150px, 9.375rem + (1vw - 10.24px) * 19.2308, 230px);
   min-height: 0vw;
+}
+@media (max-width: 1024px) {
+  .intro-animation .intro-animation-container .intro-text-container {
+    margin-left: clamp(100px, 6.25rem + (1vw - 7.7px) * 19.685, 150px);
+  }
+}
+@media (max-width: 770px) {
+  .intro-animation .intro-animation-container .intro-text-container {
+    margin-left: clamp(40px, 2.5rem + (1vw - 4.8px) * 20.6897, 100px);
+  }
+}
+@media (max-width: 480px) {
+  .intro-animation .intro-animation-container .intro-text-container {
+    margin-left: clamp(10px, 0.625rem + (1vw - 3.2px) * 18.75, 40px);
+  }
 }
 .intro-animation .intro-animation-container .intro-text-container .flex {
   display: -webkit-box;
@@ -235,6 +246,29 @@ header .header-text-container h2 {
   padding: 30px 0;
 }
 
+header {
+  opacity: 0;
+  -webkit-animation: fadeInSoft 1s ease-out 6.5s forwards;
+          animation: fadeInSoft 1s ease-out 6.5s forwards;
+}
+
+@-webkit-keyframes fadeInSoft {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeInSoft {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 section#whoami,
 section#projects,
 section#blog,
@@ -425,6 +459,20 @@ input[type=checkbox]:checked + label ~ .confirmation-message {
   display: block;
 }
 
+main {
+  opacity: 0;
+  -webkit-animation: fadeInSoft 1s ease-out 7s forwards;
+          animation: fadeInSoft 1s ease-out 7s forwards;
+}
+
+@keyframes fadeInSoft {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 #cursor {
   height: 20px;
   width: 10px;
