--- a/assets/styles/layouts/_main.scss
+++ b/assets/styles/layouts/_main.scss
@@ -11,15 +11,15 @@
 
 // ====== 🎞️ [ANIMATION D'ENTREE : Affichage retardé après l'anim d'intro]
 //TEMP Il faudra remettre l'animation d'entrée
-// main {
-//   opacity: 0;
-//   animation: fadeInSoft 1s ease-out 7s forwards;
-// }
-// @keyframes fadeInSoft {
-//   from {
-//     opacity: 0;
-//   }
-//   to {
-//     opacity: 1;
-//   }
-// }
+main {
+  opacity: 0;
+  animation: fadeInSoft 1s ease-out 7s forwards;
+}
+@keyframes fadeInSoft {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
