--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -14,15 +14,15 @@ header {
 
 // TEMP Il faudra réactiver le code suivant à la fin du développement
 // Animation d'entrée
-// header {
-//   opacity: 0;
-//   animation: fadeInSoft 1s ease-out 6.5s forwards;
-// }
-// @keyframes fadeInSoft {
-//   from {
-//     opacity: 0;
-//   }
-//   to {
-//     opacity: 1;
-//   }
-// }
+header {
+  opacity: 0;
+  animation: fadeInSoft 1s ease-out 6.5s forwards;
+}
+@keyframes fadeInSoft {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
